--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
+body{
+    display: grid;
+    grid-template-columns: 1fr, 1fr, 1fr, 1fr;
+    grid-template-rows: 10vh, 20vh, 7vh, 10vh, 20vh, 33vh;
+    background-image: url(./img/thialand\ flagg.webp);
+}
+
+
+
 #kaopatbild{
 
 max-width: 30%;
 max-height: 30%;
 border-radius: 30px;
+}
+
+.sociala-medier img{
+    max-height: 30px;
+}
+.header {
+    background-color: #8b0000;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    font-size: 2em;
 }
